<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mikepenz.materialdrawer.app.ProfileActivity">
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit_white_36dp"
        android:orderInCategory="100"
        android:title="@string/edit"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_profile_share"
        android:orderInCategory="100"
        android:title="@string/action_share"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/action_profile_share_email"
                android:orderInCategory="100"
                android:title="@string/action_email"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_profile_share_sms"
                android:orderInCategory="100"
                android:title="@string/action_sms"
                app:showAsAction="never" />
        </menu>
    </item>
    <item
        android:id="@+id/action_profile_chat"
        android:enabled="false"
        android:orderInCategory="100"
        android:title="@string/action_chat"
        app:showAsAction="never" />
</menu>
