<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.eworkplaceapps.ed.GroupListActivity">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white"
        android:orderInCategory="1"
        android:title="@string/action_search"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit_white_36dp"
        android:orderInCategory="100"
        android:title="@string/edit"
        android:visible="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_done"
        android:icon="@drawable/ic_action_accept"
        android:orderInCategory="100"
        android:title="@string/action_done"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_cancel"
        android:icon="@drawable/ic_action_cancel"
        android:orderInCategory="100"
        android:title="@string/action_cancel"
        android:visible="false"
        app:showAsAction="always" />

</menu>
