<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <include layout="@layout/status_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:background="#ffffff"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        tools:context="com.eworkplaceapps.ed.LoginActivity">

        <TextView
            android:id="@+id/tvrelease"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:gravity="center"
            android:textColor="@color/background_material_dark"
            android:textSize="@dimen/date_text_size" />

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/login_email"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/login_id"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/loginborder"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:padding="@dimen/edit_text_common_padding"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/cursor_color" />

        <TextView
            android:id="@+id/txtPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/login_password"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/loginborder"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:padding="@dimen/edit_text_common_padding"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/cursor_color" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:background="#009587"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textColor="#ffffff" />

    </LinearLayout>
</LinearLayout>