<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:wheel="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/a" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/id_frontview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/front_view_padding"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:id="@+id/id_by_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/by_location_image_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/by_location" />

                    <TextView
                        android:id="@+id/by_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/by_location"
                        android:textColor="@color/lightTeal" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/id_by_department"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/by_department" />

                    <TextView
                        android:id="@+id/by_department"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/by_department"
                        android:textColor="@color/lightTeal" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/id_outer_team"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/id_by_team"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/by_teams" />

                    <TextView
                        android:id="@+id/by_teams"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/by_team"
                        android:textColor="@color/lightTeal" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="25dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:id="@+id/id_by_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/by_status" />

                    <TextView
                        android:id="@+id/by_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/by_status"
                        android:textColor="@color/lightTeal" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/id_by_my_follow_ups"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/my_follows_ups" />

                    <TextView
                        android:id="@+id/my_followups"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/my_follow_ups"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/lightTeal" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <com.eworkplaceapps.ed.view.GroupListView
            android:id="@+id/more_listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:childDivider="#ffffff"
            android:divider="#ffffff"
            android:groupIndicator="@android:color/transparent"
            android:scrollbars="none"
            android:visibility="gone" />

        <ListView
            android:id="@+id/more_my_follow_ups_list_view"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:animationCache="false"
            android:choiceMode="singleChoice"
            android:divider="@null"
            android:scrollbars="none"
            android:scrollingCache="false"
            android:smoothScrollbar="true"
            android:visibility="gone"></ListView>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <ImageButton
                android:id="@+id/addButton"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/add_person"
                android:src="@drawable/ic_add"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textNoData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="10dp"
                android:gravity="center"
                android:textSize="18dp"
                android:textStyle="bold"
                android:visibility="gone" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tvNoDataMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/no_data_msg"
            android:textSize="18dp"
            android:textStyle="bold"
            android:visibility="gone" />

        <com.eworkplaceapps.ed.view.ProgressWheel
            android:id="@+id/loading"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:visibility="gone"
            wheel:matProg_barColor="@color/lightTeal"
            wheel:matProg_progressIndeterminate="true" />
    </FrameLayout>

</LinearLayout>